--- a/src/html/AIECHAT.html
+++ b/src/html/AIECHAT.html
@@ -16,7 +16,13 @@
         <div class="main-content">
             <div class="chatbox">
                 <div class="chatbox-header">AIECHAT</div>
-                <div class="chatbox-body chat-list"></div>
+                <div class="chatbox-body hidden chat-list"></div>
+                <div class="faq-buttons">
+                    <button class="faq-button">What is AIESEC?</button>
+                    <button class="faq-button">How to join AIESEC?</button>
+                    <button class="faq-button">Benefits of AIESEC?</button>
+                    <button class="faq-button">AIESEC Programs?</button>
+                </div>
                 <div class="chatbox-footer">
                     <textarea placeholder="Type a message..."></textarea>
                     <button id="sendButton" class="send-button" disabled>
