--- a/src/html/AIECHAT.html
+++ b/src/html/AIECHAT.html
@@ -24,6 +24,12 @@
                     <button class="faq-button">AIESEC Programs?</button>
                 </div>
                 <div class="chatbox-footer">
+                    <div class="attachment">
+                        <button id="fileInput" class="attach-button">
+                            <img src="../images/attach-icon.png" alt="Attach">
+                        </button>
+                        <input type="file" id="fileInput" style="display: none;">
+                    </div>
                     <textarea placeholder="Type a message..."></textarea>
                     <button id="sendButton" class="send-button" disabled>
                         <img src="../images/send-icon.png" alt="Send"> 
