--- a/src/html/AIECHAT.html
+++ b/src/html/AIECHAT.html
@@ -25,10 +25,10 @@
                 </div>
                 <div class="chatbox-footer">
                     <div class="attachment">
-                        <button id="fileInput" class="attach-button">
+                        <button id="attachButton" class="attach-button">
                             <img src="../images/attach-icon.png" alt="Attach">
                         </button>
-                        <input type="file" id="fileInput" style="display: none;">
+                        <input type="file" id="hiddenFileInput" name="image" style="display: none;">
                     </div>
                     <textarea placeholder="Type a message..."></textarea>
                     <button id="sendButton" class="send-button" disabled>
